# zktls-verification-succinct

./: .env.example  .gitignore  Cargo.toml
contracts/src/fixtures/: groth16-fixture.json
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
