[package]
version = "0.1.0"
name = "zktls-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "4.2.0"
fibonacci-lib = { path = "../lib" }
serde_json = "1.0"
zktls-att-verification = { git = "https://github.com/primus-labs/zktls-att-verification.git", branch = "main" }

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-4.1.0" }
